@@ -1,3 +1,7 @@
+Thu Apr 30 19:56:49 BST 2009    Tom Mortimer <tom@lemurconsulting.com>
+
+    * unittests/test_search.php: Added more tests.
+
 Thu Apr 30 17:31:38 BST 2009    Tom Mortimer <tom@lemurconsulting.com>
 
     * flaxclient.php: Added searchJSON method.
